# option_pricing

./: .gitignore  binomial_model.cpp
CPP/: CMakeLists.txt  main.cpp
CPP/include/: binomial_model.h  matplotlibcpp.h  simulations.h  stochastic.h  tools.h
CPP/src/: binomial_model.cpp  simulations.cpp  stochastic.cpp  tools.cpp
Python/: option_pricing.ipynb  simulations.py
include/: binomial_model.h
src/: binomial_model.cpp
